# chiasm

./: .gitignore  Makefile  Makefile.am  NOTES  README  TODO  configure.ac
include/: chiasm.h
include/chiasm/: decode.h  device.h  distortion.h  plugin.h  types.h  util.h
scripts/: chiasm_log.sh
src/: control.c  decode.c  device.c  display.c  distortion.cpp  image.c  plugin.c  print.c  stream.c  util.c
src/plugin/: apriltag.c  calibrate.cpp  display.c  output.c
